--- a/src/Modules/innerModule/inner/innerComponents/home/create/create.component.scss
+++ b/src/Modules/innerModule/inner/innerComponents/home/create/create.component.scss
@@ -23,7 +23,7 @@ label{
 }
 .modalInput{
     border: none;
-    border-bottom: 1px solid $PrimaryColor;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.418);
     padding: 3px;
     margin-top: 2px;
 }
@@ -39,6 +39,7 @@ label{
     display: flex;
     flex-direction: row;
     width: 100%;
+    color: grey;
     app-list-btn{
         position: absolute;
         right: 40px;
@@ -94,7 +95,10 @@ width: 100vw;
 #cName{
     margin-bottom: 6px;
     border-radius: 4px;
-    border: 1px solid grey;
+    border: 1px solid rgba(128, 128, 128, 0.493);
+    height: 35px;
+    color: grey;
+    padding-left: 15px;
 }
 .loading{
     color: white;
@@ -102,6 +106,7 @@ width: 100vw;
   }
 .customPKG_page_Edit{
     display: none;
+    padding: 30px;
 }
 @media(min-width: 600px){ 
 .formNav{
@@ -125,4 +130,15 @@ width: 100vw;
             }
         }
     }
+}
+.pagehdr{ 
+    color: cornflowerblue;
+}
+.dropdown-btn{
+    border: 1px solid rgba(128, 128, 128, 0.493);
+}
+.leadLabels{
+    font-weight: 400;
+    letter-spacing: 1;
+    color: grey;
 }
