--- a/src/Modules/innerModule/inner/innerComponents/home/description/description.component.scss
+++ b/src/Modules/innerModule/inner/innerComponents/home/description/description.component.scss
@@ -25,4 +25,67 @@
         width: 67vw !important;
         padding: 30px !important;
     }
+
+.prodDescPrice_container{
+    display: flex;
+    flex-direction: row;
+    padding-left: 20px;
+    width: 100%;
+    text-align: left;
+    .prodDescPrice{
+        margin-right: 10%;
+        text-align: left;
+        width: 25% !important;
+        height: auto;
+        margin-bottom: 15px;
+    }
+    .pageHdrs{
+        color: #337ab7;
+    }
+    .desc{ 
+        width: 25%;
+    }
+}
+}
+
+.prodInfo{
+    color: grey;
+}
+
+.addbtn{
+    background-color: #FC4F44; 
+    border: none; 
+    color: white;
+    &:hover{
+        background-color: rgb(238, 78, 67); 
+    }
+}
+.prodDescPrice_container{
+    display: flex;
+    flex-direction: row;
+    padding-left: 20px;
+    width: 100%;
+    text-align: left;
+    .prodDescPrice{
+        margin-right: 7%;
+        text-align: left;
+        width: 30% !important;
+        height: auto;
+        margin-bottom: 15px;
+    }
+    .pageHdrs{
+        color: #337ab7;
+    }
+    .desc{ 
+        width: 30%;
+        height: auto;
+    }
+    .deleteBtn{
+        width: 10%;
+    }
+}
+.prod_wrapper{
+    width: auto;
+    height: 150vh;
+    overflow-y: scroll;
 }
