--- a/src/Modules/innerModule/inner/innerComponents/home/create/create.component.scss
+++ b/src/Modules/innerModule/inner/innerComponents/home/create/create.component.scss
@@ -60,8 +60,8 @@ label{
     }
 }
 .list-group{
-    max-height: 100vh !important;
-    height: 100vh !important;
+    max-height: 39vh !important;
+    height: 55vh !important;
     max-width: 100vw !important;
     width: 100vw !important;
     margin-bottom: 0;
@@ -108,7 +108,16 @@ width: 100vw;
     display: none;
     padding: 30px;
 }
+
+
 @media(min-width: 600px){ 
+    .list-group{
+        max-height: 85vh !important;
+        height: 85vh !important;
+        max-width: 100vw !important;
+        width: 100vw !important;
+        margin-bottom: 0;
+    }
 .formNav{
      bottom: 50px !important;  
     }
