--- a/src/Modules/innerModule/inner/innerComponents/header/header.component.scss
+++ b/src/Modules/innerModule/inner/innerComponents/header/header.component.scss
@@ -1,6 +1,7 @@
 $accentColor: #FC4F44;
 header{ 
-    height: 50vh;
+    height: 35vh;
+    margin-bottom: 5px;
     @media(min-width: 600px){
         height: 100vh;
     }
@@ -8,8 +9,8 @@ header{
 .mHeader{
     background: #212440;
     border-radius: 0px 0px 50px 50px;
-    height: 47vh;
-    width: 104vw;
+    height: 35vh;
+    width: 100vw;
     margin: 0;
     padding: 0;
     @media(min-width: 600px){
@@ -46,6 +47,9 @@ header{
     color: white;
     font-style: bold;
     margin-left: 20px;
-    margin-top: 100px;
+    margin-top: 40px;
     font-size: 25px;
+    @media(min-width: 600px){
+        margin-top: 100px;
+    }
 }
