--- a/src/Modules/innerModule/inner/innerComponents/home/description/description.component.scss
+++ b/src/Modules/innerModule/inner/innerComponents/home/description/description.component.scss
@@ -97,6 +97,7 @@
         text-align: left;
         width: 30% !important;
         height: auto;
+        // margin-right: 25px;
         margin-bottom: 15px;
         @media(min-width: 600px){
             margin-right: 7%;
@@ -104,10 +105,11 @@
     }
     .pageHdrs{
         color: #337ab7;
+        margin-right: 40px !important;
     }
     .desc{ 
-        width: 30%;
-        height: auto;
+        width: 30% !important;
+        height: auto; 
     }
     .deleteBtn{
         width: 30px !important;
