--- a/src/Modules/innerModule/inner/innerComponents/home/description/description.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/home/description/description.component.html
@@ -66,7 +66,7 @@
           <div class="prodDescPrice_container scrollable-content">
               <div style="display: inline-block" class="prodDescPrice prodInfo"><p>{{ data.name }}</p></div>
               <div style="display: inline-block" class="prodDescPrice desc prodInfo"><p>{{ data.description }}</p></div>
-              <div style="display: inline-block" class="prodDescPrice prodInfo"><p>{{ data.amount }}</p></div>
+              <div style="display: inline-block" class="prodDescPrice price prodInfo"><p>{{ data.amount }}</p></div>
               <div class="prodDescPrice deleteBtn"><a (click)="onItemDeselect(data)" class="delete"><i class="fa fa-trash"></i></a>
           </div>
           
