--- a/src/Modules/innerModule/inner/innerComponents/home/description/description.component.scss
+++ b/src/Modules/innerModule/inner/innerComponents/home/description/description.component.scss
@@ -110,6 +110,10 @@
     .desc{ 
         width: 30% !important;
         height: auto; 
+        overflow-x: scroll;
+    }
+    .price{
+        
     }
     .deleteBtn{
         width: 30px !important;
